# OSaSP-labs

./: .gitignore  README.md
Lab_1/: EntryPoint.cpp  Lab_1.sln  Lab_1.vcxproj  Lab_1.vcxproj.filters
Lab_1/Debug/: Lab_1.ilk  Lab_1.vcxproj.FileListAbsolute.txt  vc142.idb
Lab_1/Debug/Lab_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab_2/: TextTable.cpp  TextTable.h  WinGUITextOutput.cpp  content.txt
Lab_3/: CMakeLists.txt
Lab_3/dynamic-import/: main.cpp
Lab_3/remote-thread-call/: injected.cpp  injector.cpp
Lab_3/static-import/: main.cpp
Lab_4/: Lab_4.cpp  Lab_4.docx
Lab_5/: Lab_5.docx  test.txt
Lab_5/ConsoleApp/: ConsoleApp.cpp  TaskQueue.cpp  TaskQueue.h  TaskWorker.cpp  TaskWorker.h
